# thaler_reading_group

./: .gitignore
week1-freivalds/: Cargo.toml
week1-freivalds/src/: main.rs
week1-frievalds/: Cargo.toml
week1-frievalds/src/: main.rs
week2-lagrange/: Cargo.toml
week2-lagrange/src/: main.rs
week3-sum_check/: Cargo.toml
week3-sum_check/src/: lib.rs
week4-gkr/: Cargo.toml
