[package]
name = "week3-sum_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = {git = "https://github.com/arkworks-rs/algebra.git"}
ark-poly = {git = "https://github.com/arkworks-rs/algebra.git"}
ark-std = "0.3.0"
rand = "0.8.5"
